add introduction to data scientist project

--- a/23_projet_data_scientist/biblio.bib
+++ b/23_projet_data_scientist/biblio.bib
@@ -1,9 +1,12 @@
 Pour author, les noms et prénoms sont séparés par une vigule, et les différents auteurs par AND
+@misc{landsat8,
+	author={U.S. Geological Survey},
+	howpublished="\url{http://eros.usgs.gov/}",
+	year={2016}
+}
 @misc{cesds,
 	author={Telecom-ParisTech},
 	year={2014},
-	title={Certificat d'Etudes Scientifiques en Data Scientist},
-	institution={Telecom-ParisTech},
 	url={http://www.telecom-evolution.fr/fr/formations-certifiantes/ces-data-scientist},
 	howpublished="\url{http://www.telecom-evolution.fr/fr/formations-certifiantes/ces-data-scientist}"
 }
