finalize introduction report for data scientist project

--- a/23_projet_data_scientist/biblio.bib
+++ b/23_projet_data_scientist/biblio.bib
@@ -1,4 +1,52 @@
 Pour author, les noms et prénoms sont séparés par une vigule, et les différents auteurs par AND
+
+BibTeX | EndNote | ACM Ref
+
+@book{White:2009:HDG:1717298,
+	author = {White, Tom},
+	title = {Hadoop: The Definitive Guide},
+	year = {2009},
+	isbn = {0596521979, 9780596521974},
+	edition = {1st},
+	publisher = {O'Reilly Media, Inc.},
+} 
+
+@article{Jain:2014:DVD:2667432.2667451,
+	author = {Jain, Abhijit},
+	title = {Data Visualization with the D3.JS Javascript Library},
+	journal = {J. Comput. Sci. Coll.},
+	issue_date = {December 2014},
+	volume = {30},
+	number = {2},
+	month = dec,
+	year = {2014},
+	issn = {1937-4771},
+	pages = {139--141},
+	numpages = {3},
+	url = {http://dl.acm.org/citation.cfm?id=2667432.2667451},
+	acmid = {2667451},
+	publisher = {Consortium for Computing Sciences in Colleges},
+	address = {USA},
+} 
+
+@article{Meng:2016:MML:2946645.2946679,
+	author = {Meng, Xiangrui and Bradley, Joseph and Yavuz, Burak and Sparks, Evan and Venkataraman, Shivaram and Liu, Davies and Freeman, Jeremy and Tsai, DB and Amde, Manish and Owen, Sean and Xin, Doris and Xin, Reynold and Franklin, Michael J. and Zadeh, Reza and Zaharia, Matei and Talwalkar, Ameet},
+	title = {MLlib: Machine Learning in Apache Spark},
+	journal = {J. Mach. Learn. Res.},
+	issue_date = {January 2016},
+	volume = {17},
+	number = {1},
+	month = jan,
+	year = {2016},
+	issn = {1532-4435},
+	pages = {1235--1241},
+	numpages = {7},
+	url = {http://dl.acm.org/citation.cfm?id=2946645.2946679},
+	acmid = {2946679},
+	publisher = {JMLR.org},
+	keywords = {apache spark, distributed algorithms, scalable machine learning},
+} 
+
 @misc{landsat8,
 	author={U.S. Geological Survey},
 	howpublished="\url{http://eros.usgs.gov/}",
