finalize report that introduce data scientist project

--- a/23_projet_data_scientist/biblio.bib
+++ b/23_projet_data_scientist/biblio.bib
@@ -1,6 +1,16 @@
 Pour author, les noms et prénoms sont séparés par une vigule, et les différents auteurs par AND
 
 BibTeX | EndNote | ACM Ref
+@misc{geosud,
+	institution=Geosud,
+	howpublished="\url{http://ids.equipex-geosud.fr/images-landsat-8/}",
+	year={2016}
+}
+@misc{esri,
+	institution={ESRI},
+	howpublished="\url{https://blogs.esri.com/esri/arcgis/2013/07/24/band-combinations-for-landsat-8/}",
+	year={2016}
+}
 
 @book{White:2009:HDG:1717298,
 	author = {White, Tom},
