finalize report that introduce data science project

--- a/23_projet_data_scientist/presentation-projet.tex
+++ b/23_projet_data_scientist/presentation-projet.tex
@@ -124,7 +124,7 @@ On pourra alors tester la généralisation du classifieur, en s'intéressant à 
 \chapter{Outils pour le stockage, le calcul et la visualisation}
 
 Si l'on s'intéresse à un territoire grand comme la France, on doit s'attendre à récupérer un total de 49 datasets 
-pour quadriller cette zone \cite{quadrillage}\\
+pour quadriller cette zone \ref{quadrillage}\\
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.25]{emrpise_france_landsat8.jpg}
